add something about JVM